--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
     <section id="registroSection">
         <div class="contenedorForm">
             <h3>Registro</h3>
-            <form id="formRegistro" action="backend/registroUsuario.php" method="post" enctype="multipart/form-data">
+            <form id="formRegistro" action="controllers/registroUsuario.php" method="post" enctype="multipart/form-data">
                 <input type="email" id="email" placeholder="correo" name="email">
                 <input type="text" id="usuario" placeholder="usuario" name="usuario">
                 <input type="password" id="password" placeholder="contraseña" name="pass">
