Agregando carpeta multimedia y pagina para la visualisacion de un producto

--- a/social.html
+++ b/social.html
@@ -42,7 +42,7 @@
                 <div class="info">
                     <span>Usuario 1</span>
                     <p>Descripción del perfil 1</p>
-                    <a href="perfil.html" target="_blank">
+                    <a href="perfil.php" target="_blank">
                         <button>Ir al perfil</button>
                     </a>
                 </div>
@@ -52,7 +52,7 @@
                 <div class="info">
                     <span>Usuario 2</span>
                     <p>Descripción del perfil 2</p>
-                    <a href="perfil.html" target="_blank">
+                    <a href="perfil.php" target="_blank">
                         <button>Ir al perfil</button>
                     </a>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="info">
                     <span>Usuario 3</span>
                     <p>Descripción del perfil 3</p>
-                    <a href="perfil.html" target="_blank">
+                    <a href="perfil.php" target="_blank">
                         <button>Ir al perfil</button>
                     </a>
                     
@@ -73,7 +73,7 @@
                 <div class="info">
                     <span>Usuario 4</span>
                     <p>Descripción del perfil 4</p>
-                    <a href="perfil.html" target="_blank">
+                    <a href="perfil.php" target="_blank">
                         <button>Ir al perfil</button>
                     </a>
                 </div>
